<?xml version="1.0"?>
<package format="2">
  <name>sr_hand_config</name>
  <version>0.0.0</version>
  <description>The sr_hand_config package</description>
  <maintainer email="software@shadowrobot.com">user</maintainer>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
